toolsBar width wrapped fix

--- a/src/app/workboard/workoardPage.module.css
+++ b/src/app/workboard/workoardPage.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
+
+    margin-right: 72px;
 }
 
 .workboard h1 {
